--- a/css/main.css
+++ b/css/main.css
@@ -1,116 +1,84 @@
 html {
   box-sizing: border-box;
-  font: normal 100%;
   line-height: 1.5;
-  margin: 0;
+  font-family: Georgia;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-body {
-  background-color: white;
-  margin: 0;
-}
-
 header {
   background-color: #ffe500;
-  padding: .1rem 0 .4rem;
   text-align: center;
-  margin: 0;
 }
 
 h1 {
-  font-family: "Sigmar One", sans-serif;
   color: #b20953;
-  text-align: center;
+  font-family: "Sigmar One";
   font-size: 3rem;
   margin: 0;
   padding: 0;
-  text-transform: capitalize;
 }
 
 h2 {
-  font-family: "Sigmar One", sans-serif;
-  text-transform: capitalize;
   color: #b20953;
-  text-align: left;
-  font-size: 1.8rem;
-  margin: 0;
-  padding: 0;
-  padding-top: 1rem;
-}
-
-p {
-  font-family: Georgia, serif;
-  text-align: left;
-  margin: .1em;
-  font-size: 1rem;
-  padding-top: 1rem;
-}
-
-nav ul {
-  display: block;
-  margin: 0;
-  padding: .1rem;
-  font-size: 1.2rem;
-  font-family: Georgia, serif;
-  padding-bottom: .22rem;
-  list-style-type: none;
-  text-decoration: none;
+  font-size: 1.875rem;
+  font-family: "Sigmar One";
 }
 
 nav li {
   display: inline-block;
-  text-align: center;
+  margin-bottom: .3em;
 }
 
-nav a {
-  color: white;
-  display: inline;
-  padding: .35em;
+a {
+  color: #fff;
   background-color: #b2a212;
+  margin: 0;
+  padding: .2em .5em .3em;
+  font-size: 1.125rem;
   border-radius: 4px;
+  display: inline-block;
   text-decoration: none;
 }
 
-nav a:hover {
-  background-color: #cc1465;
+body {
+  margin: 0;
 }
 
-.current {
+.nav {
+  margin: 0;
+  padding: 0;
+}
+
+.nav .current {
+  background-color: #b20953;
+}
+
+a:hover {
   background-color: #cc1465;
 }
 
 img {
-  display: block;
   width: 100%;
-  margin: 0;
-  padding: 1.6rem .5rem 0 0;
-}
-
-footer {
-  text-align: center;
-  font-family: Georgia, serif;
-  color: #2f2d13;
-  background-color: #ffe500;
-  margin: 0;
-  padding: .75em;
-}
-
-figure {
-  margin: 0;
-  padding: 0;
-}
-
-figcaption {
-  margin: 0;
-  padding: 0;
+  display: block;
 }
 
 main {
-  padding-left: .75em;
-  padding-top: .6rem;
-  padding-bottom: 1em;
+  padding: 0 .75em;
+}
+
+p {
+  color: #2f2d13;
+}
+
+footer {
+  background-color: #ffe500;
+  text-align: center;
+  padding: .75em;
+}
+
+small {
+  font-size: .75rem;
 }
